--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@splinetool/react-spline": "^4.1.0",
     "@tiptap/extension-code-block-lowlight": "^3.10.4",
     "@tiptap/extension-image": "^3.10.4",
     "@tiptap/extension-table": "^3.10.4",
@@ -19,11 +20,17 @@
     "@tiptap/react": "^3.10.4",
     "@tiptap/starter-kit": "^3.10.4",
     "axios": "^1.13.2",
+    "framer-motion": "^12.23.24",
     "lowlight": "^3.3.0",
     "lucide-react": "^0.553.0",
+    "prism-react-renderer": "^2.4.1",
+    "prismjs": "^1.30.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "react-router-dom": "^7.9.5"
+    "react-markdown": "^10.1.0",
+    "react-router-dom": "^7.9.5",
+    "react-syntax-highlighter": "^16.1.0",
+    "remark-gfm": "^4.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
